tests/baselines/reference/parseErrorIncorrectReturnToken.errors.txt
error TS-1: Pre-emit (7) and post-emit (8) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
parseErrorIncorrectReturnToken.ts(2,17): error TS1005: ':' expected.
parseErrorIncorrectReturnToken.ts(4,22): error TS1005: '=>' expected.
parseErrorIncorrectReturnToken.ts(4,24): error TS2693: 'string' only refers to a type, but is being used as a value here.
parseErrorIncorrectReturnToken.ts(9,18): error TS1005: '{' expected.
parseErrorIncorrectReturnToken.ts(9,21): error TS1434: Unexpected keyword or identifier.
parseErrorIncorrectReturnToken.ts(9,21): error TS2693: 'string' only refers to a type, but is being used as a value here.
parseErrorIncorrectReturnToken.ts(12,1): error TS1128: Declaration or statement expected.


!!! error TS-1: Pre-emit (7) and post-emit (8) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2304 parseErrorIncorrectReturnToken.ts:10:16: Cannot find name 'n'.
==== parseErrorIncorrectReturnToken.ts (7 errors) ====
    type F1 = {
        (n: number) => string; // should be : not =>
                    ~~
!!! error TS1005: ':' expected.
    }
    type F2 = (n: number): string; // should be => not :
                         ~
!!! error TS1005: '=>' expected.
                           ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
    
    // doesn't work in non-type contexts, where the return type is optional
    let f = (n: number) => string => n.toString();
    let o = {
        m(n: number) => string {
                     ~~
!!! error TS1005: '{' expected.
                        ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
                        ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
            return n.toString();
        }
    };
    ~
!!! error TS1128: Declaration or statement expected.
    